--- a/neta.conf
+++ b/neta.conf
@@ -115,7 +115,7 @@ filter {
 	}
 	if [type] == "syslog" {
 		grok {
-			match => { "message" => "%{SYSLOGBASE} %{GREEDYDATA:message}" }
+			match => { "message" => "%{SYSLOGBASE} ?(\<%{LOGLEVEL:severity}\>)? %{GREEDYDATA:message}" }
 			overwrite => [ "message" ]
 		}
 		date {
